[project]
name = "asset-securities-report-agent"
version = "0.1.0"
description = "The agent which analyze the financial report hosted as an A2A server."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "google-adk>=0.0.3",
    "google-genai>=1.9.0",
    "python-dotenv>=1.1.0",
    "langchain_google_vertexai",
    "langchain-google-firestore",
    "langgraph",
    "pandas",
    "firebase_admin",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-cloud-aiplatform",
    "requests>=2.31.0",
    "google-cloud-run>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
