[project]
name = "company_analysis_agent"
version = "0.1.0"
description = "A2A agent for company analysis using web search results"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[project.dependencies]
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"